--- a/WEB-SITES/web/imagenes-javier/estilos-kuicho.css
+++ b/WEB-SITES/web/imagenes-javier/estilos-kuicho.css
@@ -315,3 +315,24 @@ p{
     background: rgba(0,0,0,0.5);
     border-radius: 7px;
 }
+
+
+#hoteles{
+    color:#fff;
+  
+}
+#restaurantes{
+    color:#fff;
+}
+#artesanias{
+    color:#fff;
+}
+#medicos{
+    color:#fff;
+}
+#temascales{
+    color:#fff;
+}
+#policias{
+    color:#fff;
+}
