Actualizando promociones.html

--- a/WEB-SITES/web/estilos.css
+++ b/WEB-SITES/web/estilos.css
@@ -304,3 +304,13 @@ z-index: -99;
 #inicio{
     margin-bottom:20px;
 }
+
+#mi-promo1-mensaje{
+    text-align: center;
+    
+}
+
+#mi-promo1-mensaje p{
+    text-align: center;
+    
+}
